[package]
name = "post_json_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.186"
actix-web = "~4"
actix-session = "~0.7"
actix-toolbox = { version = "~0.11", features = ["oidc"] }
env_logger = "~0.10"
serde_json = "*"
log = "0.4"
